# gurumemo

./: .gitignore  README.md
client/: .eslintrc.json  package-lock.json  package.json  setting.ts
client/api_request/: yelpBusinessSerachAPI.ts
client/components/: LocateCondition.tsx  SearchButton.tsx  YelpResult.tsx
client/pages/: index.tsx
client/styles/: YelpResult.module.css
docker/: docker-compose.yml
server/: .env  .env.sample  Cargo.toml
server/src/: lib.rs  main.rs  route.rs
server/src/database_utils/: pool.rs
server/src/domain/: entity.rs
server/src/domain/entity/: yelp_business.rs  yelp_businesses_search_api.rs
server/src/driver/: hit_yelp_api.rs
server/src/hit_api_utils/: error.rs  setting.rs
server/src/route/: get_yelp_data.rs  hit_yelp_api.rs
server/src/route/get_yelp_data/: businesses.rs
server/src/route/hit_yelp_api/: businesses_search.rs
server/src/usecase/: hit_yelp_api.rs
server/src/usecase/hit_yelp_api/: hit_business_search_api.rs
