[package]
edition = "2021"
name = "server"
version = "0.1.0"
[dependencies]
async-trait = "0.1.52"
axum = "0.4.3"
dotenv = "0.15.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11.8", features = ["json"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
