[package]
edition = "2021"
name = "server"
version = "0.1.0"
[dependencies]
async-trait = "0.1.52"
axum = "0.4.3"
dotenv = "0.15.0"
mongodb = "2.1.0"
serde_json = "1.0.73"

[dependencies.reqwest]
features = ["json"]
version = "0.11.8"

[dependencies.serde]
features = ["derive"]
version = "1.0.132"

[dependencies.tokio]
features = ["full"]
version = "1.0"

[dependencies.tower-http]
features = ["cors"]
version = "0.2.0"
